analyzer/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ERROR

Grammar

Rule 0     S' -> start
Rule 1     start -> V1
Rule 2     start -> V1 V2
Rule 3     start -> V1 V2 V3
Rule 4     start -> V1 V2 V3 V4
Rule 5     V1 -> QUL HUWA ALLAHU AHADUN
Rule 6     V2 -> ALLAHU ALSSAMADU
Rule 7     V3 -> LAM YALID WALAM YOOLADU
Rule 8     V4 -> WALAM YAKUN LAHU KUFUWAN AHADUN

Terminals, with rules where they appear

AHADUN               : 5 8
ALLAHU               : 5 6
ALSSAMADU            : 6
ERROR                : 
HUWA                 : 5
KUFUWAN              : 8
LAHU                 : 8
LAM                  : 7
QUL                  : 5
WALAM                : 7 8
YAKUN                : 8
YALID                : 7
YOOLADU              : 7
error                : 

Nonterminals, with rules where they appear

V1                   : 1 2 3 4
V2                   : 2 3 4
V3                   : 3 4
V4                   : 4
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . V1
    (2) start -> . V1 V2
    (3) start -> . V1 V2 V3
    (4) start -> . V1 V2 V3 V4
    (5) V1 -> . QUL HUWA ALLAHU AHADUN

    QUL             shift and go to state 3

    start                          shift and go to state 1
    V1                             shift and go to state 2

state 1

    (0) S' -> start .



state 2

    (1) start -> V1 .
    (2) start -> V1 . V2
    (3) start -> V1 . V2 V3
    (4) start -> V1 . V2 V3 V4
    (6) V2 -> . ALLAHU ALSSAMADU

    $end            reduce using rule 1 (start -> V1 .)
    ALLAHU          shift and go to state 5

    V2                             shift and go to state 4

state 3

    (5) V1 -> QUL . HUWA ALLAHU AHADUN

    HUWA            shift and go to state 6


state 4

    (2) start -> V1 V2 .
    (3) start -> V1 V2 . V3
    (4) start -> V1 V2 . V3 V4
    (7) V3 -> . LAM YALID WALAM YOOLADU

    $end            reduce using rule 2 (start -> V1 V2 .)
    LAM             shift and go to state 8

    V3                             shift and go to state 7

state 5

    (6) V2 -> ALLAHU . ALSSAMADU

    ALSSAMADU       shift and go to state 9


state 6

    (5) V1 -> QUL HUWA . ALLAHU AHADUN

    ALLAHU          shift and go to state 10


state 7

    (3) start -> V1 V2 V3 .
    (4) start -> V1 V2 V3 . V4
    (8) V4 -> . WALAM YAKUN LAHU KUFUWAN AHADUN

    $end            reduce using rule 3 (start -> V1 V2 V3 .)
    WALAM           shift and go to state 12

    V4                             shift and go to state 11

state 8

    (7) V3 -> LAM . YALID WALAM YOOLADU

    YALID           shift and go to state 13


state 9

    (6) V2 -> ALLAHU ALSSAMADU .

    LAM             reduce using rule 6 (V2 -> ALLAHU ALSSAMADU .)
    $end            reduce using rule 6 (V2 -> ALLAHU ALSSAMADU .)


state 10

    (5) V1 -> QUL HUWA ALLAHU . AHADUN

    AHADUN          shift and go to state 14


state 11

    (4) start -> V1 V2 V3 V4 .

    $end            reduce using rule 4 (start -> V1 V2 V3 V4 .)


state 12

    (8) V4 -> WALAM . YAKUN LAHU KUFUWAN AHADUN

    YAKUN           shift and go to state 15


state 13

    (7) V3 -> LAM YALID . WALAM YOOLADU

    WALAM           shift and go to state 16


state 14

    (5) V1 -> QUL HUWA ALLAHU AHADUN .

    ALLAHU          reduce using rule 5 (V1 -> QUL HUWA ALLAHU AHADUN .)
    $end            reduce using rule 5 (V1 -> QUL HUWA ALLAHU AHADUN .)


state 15

    (8) V4 -> WALAM YAKUN . LAHU KUFUWAN AHADUN

    LAHU            shift and go to state 17


state 16

    (7) V3 -> LAM YALID WALAM . YOOLADU

    YOOLADU         shift and go to state 18


state 17

    (8) V4 -> WALAM YAKUN LAHU . KUFUWAN AHADUN

    KUFUWAN         shift and go to state 19


state 18

    (7) V3 -> LAM YALID WALAM YOOLADU .

    WALAM           reduce using rule 7 (V3 -> LAM YALID WALAM YOOLADU .)
    $end            reduce using rule 7 (V3 -> LAM YALID WALAM YOOLADU .)


state 19

    (8) V4 -> WALAM YAKUN LAHU KUFUWAN . AHADUN

    AHADUN          shift and go to state 20


state 20

    (8) V4 -> WALAM YAKUN LAHU KUFUWAN AHADUN .

    $end            reduce using rule 8 (V4 -> WALAM YAKUN LAHU KUFUWAN AHADUN .)

